--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "canvas": "^2.11.2",
+    "crypto-js": "^4.2.0",
+    "fs": "^0.0.1-security",
+    "jimp": "^0.22.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
